# collection_robot

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
docs/: frames_2023-12-17_19.40.45.gv
include/collection_robot/: MoveRobot.hpp  ObjectDetect.hpp  PlanPath.hpp  block_detector.hpp  explorer.hpp  handle_trash.hpp  move_robot.hpp  object_detector.hpp  plan_path.hpp  planner_exec.hpp
launch/: collector_robot.launch.py  collector_robot.launch.py.1  spawn_tbot3_custom.py  spawn_trash.launch.py
models/trash_block/: model.sdf
results/: cppcheck_include_dir.txt  cppcheck_src_dir.txt  cppcheck_test_dir.txt  cpplint_include_dir.txt  cpplint_src_dir.txt  cpplint_test_dir.txt
scripts/: do-tests.bash
src/: MoveRobot.cpp  ObjectDetect.cpp  PlanPath.cpp  block_detector.cpp  detector_node.cpp  explorer.cpp  handle_trash.cpp  main.cpp  move_robot.cpp  object_detector.cpp  plan_path.cpp  planner_exec.cpp
test/: test.cpp
worlds/: room1.world
worlds/room1/: model.sdf
worlds/room2/room2/: model.sdf
