<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collection_robot</name>
  <version>0.0.0</version>
  <description>ENPM808X Final Project</description>
  <maintainer email="muditsingal@gmail.com">humble-dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>tf2_ros</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
